PFA_runout_DOGAMI. Update

--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -121,7 +121,7 @@
 }
 
 @techreport{robison1999,
-         title = {Storm impacts and landslides of 1996: final report},
+        title = {Storm impacts and landslides of 1996: final report},
 	author = {Robison, G. E. and Mills, K. A. and Paul, J. and Dent, L. and Skaugset, A.},
 	year = {1999},
 	institution = {Oregon Department of Forestry}
@@ -185,7 +185,7 @@
 }
 
 @techreport{burns2022,
-         title = {Protocol for channelized debris flow susceptibility mapping},
+        title = {Protocol for channelized debris flow susceptibility mapping},
 	author = {Burns, W. J. and Franczyk, J. J. and Calhoon, N. C.},
 	year = {2022},
 	institution = {Oregon Department of Geology and Mineral Resources},
@@ -194,7 +194,7 @@
 }
 
 @article{burnett2007,
-         title = {Streamside policies for headwater channels: an example considering debris flows in the Oregon Coastal Province},
+        title = {Streamside policies for headwater channels: an example considering debris flows in the Oregon Coastal Province},
 	author = {Burnett, K. M. and Miller, D. J.},
 	year = {2007},
 	journal = {Forest Science},
@@ -204,8 +204,8 @@
 }
 
 @techreport{odf2022,
-         title = {Private Forest Accord Report},
-	author = {Oregon Department of Forestry},
+        title = {Private Forest Accord Report},
+	author = {Oregon Department of Forestry,},
 	year = {2022},
 	institution = {Oregon Department of Forestry},
 	url = {https://www.oregon.gov/odf/aboutodf/documents/2022-odf-private-forest-accord-report.pdf}
@@ -294,7 +294,7 @@
 
 @inbook{wilson,
 	title = {Water in the Landscape: A Review of Contemporary Flow Routing Algorithms},
-	author = {WILSON, John P. and AGGETT, Graeme and Yongxin, DENG and LAM, Christine S.},
+	author = {Wilson, John P. and Aggett, Graeme and Yongxin, Deng and Lam, Christine S.},
 	publisher = {Springer Berlin Heidelberg},
 	pages = {213--236},
 	doi = {10.1007/978-3-540-77800-4_12},
