--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -729,3 +729,55 @@
 	url = {http://dx.doi.org/10.1002/esp.5461},
 	langid = {en}
 }
+
+@article{mikos2021,
+	title = {Debris Flow Modelling Using RAMMS Model in the Alpine Environment With Focus on the Model Parameters and Main Characteristics},
+	author = {{Miko{\v{s}}}, {Matja{\v{z}}} and Bezak, Nejc},
+	year = {2021},
+	month = {01},
+	date = {2021-01-21},
+	journal = {Frontiers in Earth Science},
+	volume = {8},
+	doi = {10.3389/feart.2020.605061},
+	url = {http://dx.doi.org/10.3389/feart.2020.605061}
+}
+
+@article{horton2013,
+	title = {Flow-R, a model for susceptibility mapping of debris flows and other gravitational hazards at a regional scale},
+	author = {Horton, P. and Jaboyedoff, M. and Rudaz, B. and Zimmermann, M.},
+	year = {2013},
+	month = {04},
+	date = {2013-04-09},
+	journal = {Natural Hazards and Earth System Sciences},
+	pages = {869--885},
+	volume = {13},
+	number = {4},
+	doi = {10.5194/nhess-13-869-2013},
+	url = {http://dx.doi.org/10.5194/nhess-13-869-2013},
+	langid = {en}
+}
+
+@article{guthrie2021a,
+	title = {DebrisFlow Predictor: an agent-based runout  program for shallow landslides},
+	author = {Guthrie, Richard and Befus, Andrew},
+	year = {2021},
+	month = {03},
+	date = {2021-03-18},
+	journal = {Natural Hazards and Earth System Sciences},
+	pages = {1029--1049},
+	volume = {21},
+	number = {3},
+	doi = {10.5194/nhess-21-1029-2021},
+	url = {http://dx.doi.org/10.5194/nhess-21-1029-2021},
+	langid = {en}
+}
+
+@article{keck2021,
+	title = {MASS WASTING RUNOUT: A SIMPLE MODEL FOR PREDICTING LANDSLIDE RUNOUT AND THE TOPOGRAPHIC EVOLUTION OF HEADWATER CHANNELS},
+	author = {Keck, Jeffrey and ,  and Istanbulluoglu, Erkan and Istanbulluoglu, Erkan},
+	year = {2021},
+	date = {2021},
+	journal = {Geological Society of America Abstracts with Programs},
+	doi = {10.1130/abs/2021am-368944},
+	url = {http://dx.doi.org/10.1130/abs/2021AM-368944}
+}
